@@ -23,7 +23,7 @@
 <bookinfo>
   <title>PHPlot Reference Manual</title>
   <corpauthor>The PHPlot Documentation Team</corpauthor>
-  <releaseinfo>Release &version; for PHPlot-5.0</releaseinfo>
+  <releaseinfo>Release &version; for PHPlot-5.0.4</releaseinfo>
   <copyright><year>2005-2007</year><holder>The PHPlot Documentation Team</holder></copyright>
   <legalnotice id="copyright">
     <para>
